--- a/ObjectDetectionML/requirements.txt
+++ b/ObjectDetectionML/requirements.txt
@@ -1,15 +1,7 @@
-cvlib==0.2.7
-imutils==0.5.4
-joblib==1.4.2
-knnclassifier==1.0.0
-numpy==1.24.4
-opencv-contrib-python==4.9.0.80
-opencv-python==4.9.0.80
-pip==24.0
-progressbar==2.5
-scikit-image==0.22.0
-scikit-learn==1.4.2
-scipy==1.13.0
-setuptools==69.5.1
-threadpoolctl==3.5.0
-urllib3==2.2.1
+cvlib
+numpy
+opencv-python
+scikit-image
+scikit-learn
+scipy
+threadpoolctl
