--- a/ObjectDetectionML/requirements.txt
+++ b/ObjectDetectionML/requirements.txt
@@ -7,3 +7,18 @@ scipy
 threadpoolctl
 torch
 torchvision
+
+#YoloV5
+gitpython>=3.1.30
+matplotlib>=3.3
+pillow>=10.3.0
+psutil  # system resources
+PyYAML>=5.3.1
+requests>=2.23.0
+thop>=0.1.1
+tqdm>=4.64.0
+ultralytics>=8.0.232
+pandas>=1.1.4
+seaborn>=0.11.0
+setuptools>=65.5.1
+wheel>=0.38.0
